--- a/config/locales/fa.yml
+++ b/config/locales/fa.yml
@@ -909,6 +909,8 @@ fa:
         personal: شخصی
         portal: لیست آدرس
   layouts:
+    modal_create:
+      success: 
     partials:
       banner:
         teaser:
@@ -930,16 +932,17 @@ fa:
           anchor: گوگل پلاس
           href: https://plus.google.com/110429028641743127592/about
         impressum: اطلاعات کلی شرکت
+        plus: clarat plus
         privacy: نکات حفاظت از اطلاعات
         tos: نکات حقوقی
         twitter:
           anchor: توییتر
           href: https://twitter.com/claratpunktorg
-        plus: clarat plus
       modal:
         beta_modal:
           link: برای ما پیغام بنویسید
           text: صفحه اینترنتی ما clarat.org جدید می باشد.در برلین می توانی پیشنهاد های کمکی زیادی را جستجو کنی.به زودی پیشنهاد های کمکی برای شهرهای دیگر را نیز جمع آوری می کنیم.از کمک شما استقبال می کنیم:آیا چیزی را دیدی که ما بهتر می توانیم آن را ارائه دهیم یا اینکه چیزی به درستی انجام نمی شود؟پس
+        more_information_overlay: 
         popup:
           button: بله،لطفا
           email_placeholder: عنوان الإیمیل *
@@ -948,8 +951,8 @@ fa:
           message: Ich möchte an der Umfrage teilnehmen
           name_placeholder: نام *
           text: آن چیزی را که ما می توانیم بهبود بدهیم و یا مورد علاقه تو می باشد را به ما اعلام کن.بدین منظور ما با کمال میل با تو تماس می گیریم.آیا اجازه ارسال ایمیل با اعلام جزئیات را به تو داریم؟
-        unavailable_location_modal: در محل زندگی تو و حال حاضر در clarat فقط پیشنهادهای تلفنی یا آنلاین موجود می باشد.این بدین معنی است که به تو کمک تلفنی یا آنلاین می شود.بطور مثال از طریق ایمیل و یا در چت.به محض اینکه در در اینجا و در نزدیکی محل سکونت تو کمکی وجود داشت با کمال میل به تو اطلاع می دهیم.اطفا آدرس ایمیل خود را وارد کنید.
         send: 
+        unavailable_location_modal: در محل زندگی تو و حال حاضر در clarat فقط پیشنهادهای تلفنی یا آنلاین موجود می باشد.این بدین معنی است که به تو کمک تلفنی یا آنلاین می شود.بطور مثال از طریق ایمیل و یا در چت.به محض اینکه در در اینجا و در نزدیکی محل سکونت تو کمکی وجود داشت با کمال میل به تو اطلاع می دهیم.اطفا آدرس ایمیل خود را وارد کنید.
       nav_lang:
         legal_title: در  clarat متن های قانونی فقط به زبان آلمانی قابل خواندن هستند.
         title: |-
@@ -1146,8 +1149,6 @@ fa:
         او  کارشناس رشته جامعه شناسی است.این یعنی اینکه او اطلاعات زیادی در مورد اجتماع دارد.چیزی که مهم هست را سریع می بیند.در clarat در تیم تحقیق فعالیت دارد.او تصمیم میگیرد که چه چیزهایی در clarat به عنوان پیشنهاد ثبت شود.موسیقی دوست داشتنی او
         La Prima Estate از Erlend Oye می باشد.
       andrea: او در رشته مدیریت بین فرهنگی تحصیل کرده است.این بدین معنی است که او اطلاعات زیادی درمورد اقتصاد و قرهنگ دارد.او دقیق کار می کند.در clarat در تیم تحقیق فعالیت دارد و نگاه کلی در مورد موضوع دنیای خانواده دارد.موسیقی دوست داشتنی اوWork Me از The Black Keys می باشد.
-      anja: او مهندس و در رشته اکولوژی تحصیل کرده است و می تواند منطقی و سریع فکر کند.او در clarat در تیم تحقیق فعالیت دارد و ما را از کیفیت کارها مطمئن می کند.موسیقی دوست داشتنی او Where is my mind از den Pixies می باشد.
-      ann-sophie: او در رشته دانش فرهنگ اجتماعی تحصیل کرده است و به خوبی با موضوع مهاجرت آشنایی دارد.او به خوبی می تواند مسائل را درک و برنامه ریزی کند و در clarat در تیم تحقیق فعالیت می کند.موسیقی مورد علاقه او Papertrails از Darkside می باشد.
       anna: او کارشناس رشته لغت‌شناسی است.این بدین معنی است که او در مورد زبان و ادبیات اطلاعات زیادی دارد و می تواند به خوبی مسائل پیچیده را درک کند.در clarat در تیم تحقیق فعالیت دارد و کارشناس در بخش clarat-Sprache نیز می باشد.موسیقی مورد علاقه او 1009 از Bonobo می باشد.
       anne: او در رشته اقتصاد و روابط بین الملل تحصیل کرده است.او می تواند سریع منطقی فکر کند.در clarat او رئیس است.او وظیفه تمام تیم را بر عهده گرفته است و همه چیز را ساز مان دهی می کند.موسیقی مورد علاقه اوDenken Sie Groß از Deichkind می باشد.
       astrid: او کارشناس رشته سیاست است.این بدین معنی است که او اطلاعات زیادی درباره سیاست و اجتماع دارد.او با انرژی مثبت و انتقال آن به دیگران در clarat در تیم تحقیق فعالیت دارد و در اینترنت به دنبال سازمان های مختلف میگردد.موسیقی مورد علاقه او You Got Meاز The Roots می باشد.
@@ -1187,7 +1188,6 @@ fa:
       lisa: او کارشناس طراحی است و به همراه دیگران در توسعه راه حل های خلاقانه فعالیت می کند.او به خوبی قادر به طراحی است و در clarat در تیم تحقیق و گفتگو با استفاده کنندگان از سایت ما فعال مست.او قادر است دیگران را از نحوه استفاده از clarat آگاه کند.موسیقی مورد علاقه او Resolution از Matt Corby می باشد.
       magdalena: او در رشته پژوهشی آمریکای لاتین تحصیل کرده است.این بدین معنی است که او اطلاعات زیادی در مورد فرهنگ و سیاست آمریکای لاتین دارد.او به خوبی می توانی برنامه ریزی و جهت یابی کند.او در clarat در تیم تحقیق فعالیت می کند و موسیقی مورد علاقه او Summer Breeze از CocoRosie می باشد.
       marcus: او طراح وب است.این بدین معنی است که صفحات اینترنت را برنامه ریزی و می سازد و همچنین به خوبی طرح می ریزد.در clarat در تیم IT فعالیت می کند و مراقب آن است که صفحه اینترنتی ما زیباتر و بهتر جلوه دهد.موسیقی مورد علاقه او Hysteria از MUSE می باشد.
-      marie: او محقق صلح و اختلافات می باشد.این بدین معنی است که او اطلاعات زیادی در مورد جنگ و اختلافات دارد.او به سرعت می تواند اطلاعات را جمع آوری و تنظیم کند و در clarat در تیم تحقیق فعالیت می کند.موسیقی مورد علاقه او Move On Up از Mayfield می باشد.
       meta_description: این اعضای تیم پشت صحنه در لیست کمکی آلمان می باشد.بیش از ۴۰ کارمند روزانه در این زمینه کار می کنند که تو به راحتی کمک پیدا کنی.
       michaela: او در رشته علوم اقتصاد کامپیوتر تحصیل کرده است.او می تواند دیگران را به هیجان بیاورد و اطلاعات زیادی در مورد رسانه های جدید دارد.در clarat در تیم تحقیق فعالیت می کند و مراقب آن است که صفحه اینترنتی ما به خوبی عمل کند.موسیقی مورد علاقه او Digital Love از Daft Punk می باشد.
       nahla: او کارشناس باستان شناسی است.او اطلاعات زیادی در مورد تاریخ و انسانها دارد.سرعت کار او بالاست.در clarat در تیم ترجمه به زبان عربی فعالیت دارد.موسیقی مورد علاقه او Nassam Allina El Hawa از Fayrouz می باشد.
