new language files

--- a/config/locales/fa.yml
+++ b/config/locales/fa.yml
@@ -106,7 +106,7 @@ fa:
           answer: ما همیشه بر اینکه اطلاعات در clarat به روز باشد نظارت می کنیم.زیرا فقط در این صورت clarat می تواند به کودکان٬جوانان٬خانواده و پناهندگان کمک کند.اگر اطلاعات صحیح نباشند ما آنها را به روز رسانی کرده و تغییر می دهیم.
           question: آیا اطلاعات clarat به روز می باشد؟
         question_7:
-          answer: بعضی از پیشنهادها را در <b>clarat family</b> و در <b>clarat refugees</b> می توانی از همه جا استفاده کنی.مهم نیست که کجا زندگی می کنی.پیشنهاد های بسیاری را از طریق تلفن و یا اینترنت می توانی پیدا کنی که تو را کمک خواهند کرد.بدین معنی که این کمک ها از طریق ایمیل٬چت و روی صفحه آنلاین ارائه می شود.از سایر پیشنهادهای بسیار دیگر نیز می توانی در نزدیکی محل سکونت خود بهره ببری. در  <b>clarat refugees</b> به زودی پیشنهادهای بسیاری در شهرهای بزرگ سراسر آلمان پیدا می کنی.در حال حاضر این خدمات در شهرهای برلین٬ کلن و دوسلدورف ارائه می شود.ما خدمات <b>clarat family</b> را از برلین شروع به کار کردیم.در اینجا پیشنهادهای بسیاری وجود دارند٬ با این حال ما به جمع آوری اطلاعات ادامه می دهیم.به زودی حتی در شهرهای بزرگ دیگر آلمان.
+          answer: بعضی از پیشنهادها را در <b>clarat family</b> و در <b>clarat refugees</b> می توانی از همه جا استفاده کنی.مهم نیست که کجا زندگی می کنی.پیشنهاد های بسیاری را از طریق تلفن و یا اینترنت می توانی پیدا کنی که تو را کمک خواهند کرد.بدین معنی که این کمک ها از طریق ایمیل٬چت و روی صفحه آنلاین ارائه می شود.از سایر پیشنهادهای بسیار دیگر نیز می توانی در نزدیکی محل سکونت خود بهره ببری. در  <b>clarat refugees</b> به زودی پیشنهادهای بسیاری در شهرهای بزرگ سراسر آلمان پیدا می کنی.در حال حاضر این خدمات در شهرهای برلین٬ هامبورگ،مونیخ،دورتموند،کلن، دوسلدورف،نورنبرگ و اشتوتگارت ارائه می شود.ما خدمات <b>clarat family</b> را از برلین شروع به کار کردیم.در اینجا پیشنهادهای بسیاری وجود دارند٬ با این حال ما به جمع آوری اطلاعات ادامه می دهیم.به زودی حتی در شهرهای بزرگ دیگر آلمان.
           question: آیا clarat در سراسر آلمان فعالیت دارد؟
         question_8:
           answer: clarat کمک هایی را که می توانی در نزدیکی خود پیدا کنی را در یک فهرست و دید کلی به تو نشان می دهد.همچنین ما به تو می گوییم دقیقا چه کاری را باید انجام دهی تا این که کمک دریافت کنی. ما همیشه با زبان ساده آنها را می نویسیم برای اینکه درک آن برای همه آسان باشد.چرا که در clarat باید حتی کسانی که آلمانی به خوبی صحبت نمی کنند نیز کمک بیابند.همچنین می توانی همه پیشنهادها را به زبان های دیگر مطالعه کنی.برای اطلاعات بیشتر روی این لینک کلیک کن%{ref_to_how_many_languages}.
@@ -730,8 +730,8 @@ fa:
         categories: طبقه بندی ها
         filter: فیلتر
         map: نقشه
-      more_info_button: 
-      more_info_text: 
+      more_info_button: نزد مشاور
+      more_info_text: 'اطلاعات بیشتر در مورد:'
     search_results:
       bridge: برای جستجوی عبارت
       enclosing: پیدا کردن
@@ -952,6 +952,7 @@ fa:
           text: آن چیزی را که ما می توانیم بهبود بدهیم و یا مورد علاقه تو می باشد را به ما اعلام کن.بدین منظور ما با کمال میل با تو تماس می گیریم.آیا اجازه ارسال ایمیل با اعلام جزئیات را به تو داریم؟
         unavailable_location_modal: در محل زندگی تو و حال حاضر در clarat فقط پیشنهادهای تلفنی یا آنلاین موجود می باشد.این بدین معنی است که به تو کمک تلفنی یا آنلاین می شود.بطور مثال از طریق ایمیل و یا در چت.به محض اینکه در در اینجا و در نزدیکی محل سکونت تو کمکی وجود داشت با کمال میل به تو اطلاع می دهیم.اطفا آدرس ایمیل خود را وارد کنید.
         send: 
+        more_information_overlay: با عرض پوزش.متاسفانه برای جستجوی تو هیچ مشاوری وجود ندارد.ما اما سعی می کنیم پیشنهادات خود را توسعه بدهیم.با کمال میل و به محض اینکه در clarat اطلاعات بیشتری در مورد جستجوی تو بدست آوردیم،تو را در جریان می گذاریم.به همین منظور آدرس ایمیل خود را در اینجا وارد کن.
       nav_lang:
         legal_title: در  clarat متن های قانونی فقط به زبان آلمانی قابل خواندن هستند.
         title: |-
