--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -739,8 +739,8 @@ en:
         categories: Categories
         filter: Filter
         map: Map
-      more_info_button: 
-      more_info_text: 
+      more_info_button: To adviser
+      more_info_text: 'More information:'
     search_results:
       bridge: for the search term
       enclosing: found
@@ -945,6 +945,7 @@ en:
           text: Tell us what you like and what we can improve. We'd like to chat with you. Can we send you an email with all the details?
         unavailable_location_modal: At the moment, we only have telephone or online support services for your current location. That means you can get help over the telephone. Or online. For example, via e-mail or over chat. We will let you know as soon as there are support services near you. Please enter your e-mail address here.
         send: 
+        more_information_overlay: 'Sorry. Unfortunately, there are no advisers for your search. But we are trying to add to our service all the time. We will let you know as soon as there is more information on clarat about your search. Please enter your email address here. '
       nav_lang:
         legal_title: Legal text can only be read in German.
         title: |-
