Tracking for more info shown

--- a/config/locales/ar.yml
+++ b/config/locales/ar.yml
@@ -675,8 +675,8 @@ ar:
         categories: الفئات
         filter: فلتر
         map: خريطة
-      more_info_button: 
-      more_info_text: 
+      more_info_button: 'إلى مقدم المشورة:'
+      more_info_text: 'للمزيد من المعلومات حول:'
     search_results:
       bridge: من أجل
       enclosing: تم العثور على
@@ -895,6 +895,9 @@ ar:
           سوف نخبرك بكل سرور بمجرد أن يكون في كلارات مساعدات بالقرب منك
           لذلك سجل عنوان بريدك الإليكتروني هنا
         send: 
+        more_information_overlay: 'عذراً. للأسف لايوجد مرشد بخصوص موضوع بحثك. ولكننا نسعى بشكل مستمر لتوسيع عروض المساعدة المتوفرة. سنقوم بكل سرور بإخبارك حالما يتوفر لدى clarat المزيد من المعلومات بخصوص موضوع بحثك. من أجل ذلك قم بإدخال عنوان بريدك الإلكتروني هنا.
+
+'
       nav_lang:
         legal_title: في كلارات، لا يمكن قراءة النص القانوني إلا باللغة الألمانية.
         title: |-
