corrected gej language

--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -860,8 +860,7 @@ fr:
         fra: Français
         fuf: Pular - Pular
         ful: Ful - Fulfulde
-        gej: 
-        gen: Gen - Mina
+        gej: Gen - Mina
         geo: géorgien - ქართული
         hau: haoussa - Hausancī
         hbs: Monténégrin - Crnogorski jezik / Црногорски језик
