--- a/config/locales/pl.yml
+++ b/config/locales/pl.yml
@@ -906,8 +906,7 @@ pl:
         fra: Język francuski - Français
         fuf: Pular - Pular
         ful: Ful - Fulfulde
-        gej: 
-        gen: Gen - Mina
+        gej: Gen - Mina
         geo: gruziński - ქართული
         hau: język hausa - Hausa
         hbs: Język czarnogórski - Crnogorski jezik / Црногорски језик
